discussion/kv_engine/170521/170521_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Create json_validator library

This is currently a wrapper on top of JSON_checker,
and the main purpose of the library is to make it
easy to flip the underlying library without having
to manually update code in a lot of other locations
in order to flip the backend.

Change-Id: I527012ecccfe1cd43c0794361b159f0e7f3c7c29

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-11 13:24:53.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 13:32:26.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43856/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43856/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25685/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25685/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5190/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5190/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17585/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17585/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5251/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5251/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17280/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17280/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16359/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16359/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18318/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18318/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14382/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/json/syntax_validator.cc b/json/syntax_validator.cc
index cb22c14ab..38f6266c3 100644
--- a/json/syntax_validator.cc
+++ b/json/syntax_validator.cc
@@ -58,7 +58,8 @@ std::string to_string(const cb::json::SyntaxValidator::Type&amp; type) {
     return &quot;Unknown: &quot; + std::to_string(int(type));
 }
 
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os, const cb::json::SyntaxValidator::Type&amp; type) {
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os,
+                         const cb::json::SyntaxValidator::Type&amp; type) {
     os &lt;&lt; to_string(type);
     return os;
 }
diff --git a/json/syntax_validator.h b/json/syntax_validator.h
index ad988f7e8..e2c85989f 100644
--- a/json/syntax_validator.h
+++ b/json/syntax_validator.h
@@ -11,8 +11,8 @@
 #pragma once
 
 #include &lt;memory&gt;
-#include &lt;string_view&gt;
 #include &lt;ostream&gt;
+#include &lt;string_view&gt;
 
 namespace cb::json {
 
@@ -34,5 +34,6 @@ public:
 
 } // namespace cb::json
 
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os, const cb::json::SyntaxValidator::Type&amp; t);
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os,
+                         const cb::json::SyntaxValidator::Type&amp; t);
 std::string to_string(const cb::json::SyntaxValidator::Type&amp; type);
diff --git a/json/syntax_validator_bench.cc b/json/syntax_validator_bench.cc
index 35a07a306..cfad728b7 100644
--- a/json/syntax_validator_bench.cc
+++ b/json/syntax_validator_bench.cc
@@ -87,7 +87,9 @@ static void BM_SyntaxValidator_NlohmannJsonArray(benchmark::State&amp; state) {
     benchmarkJsonValidator(
             SyntaxValidator::Type::Nlohmann, state, makeArray(state), true);
 }
-BENCHMARK(BM_SyntaxValidator_NlohmannJsonArray)-&gt;RangeMultiplier(10)-&gt;Range(1, 10000);
+BENCHMARK(BM_SyntaxValidator_NlohmannJsonArray)
+        -&gt;RangeMultiplier(10)
+        -&gt;Range(1, 10000);
 
 // Benchmark checking a nested JSON dictonary as JSON; e.g.
 //   {&quot;0&quot;: { &quot;1&quot;: { ... }}}

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14382/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15540/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:230:16: error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
    return cb::xattr::validate(*validator, view);
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15540/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:230:16:
error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15540/ )
----------------------------------------------------------------------------------------------------------------------
